--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@langchain/anthropic": "^0.3.23",
+    "@langchain/core": "^0.3.60",
     "@langchain/google-genai": "^0.2.13",
     "@langchain/mistralai": "^0.2.1",
     "@radix-ui/react-accordion": "1.2.2",
